# mid-engine

./: -_-notice.mdix  .gitignore  Cargo.toml  README.md
.github/: mid-engine-landing-index.html  mid-log-test-template.html  mid-math-test-template.html
.github/workflows/: bench-vs-glam.yml  mid-log-test.yml  mid-math-test.yml  nuke-workflow-history.yml
.mdix/: .manifest.mdix
.mdix/project_structure/: project_structure.mdix
crates/mid-common/: Cargo.toml
crates/mid-common/src/: error.rs  lib.rs  traits.rs  types.rs
crates/mid-ecs/: Cargo.toml
crates/mid-ecs/src/: archetype.rs  ffi.rs  lib.rs  query.rs  sync.rs  world.rs
crates/mid-log/: Cargo.toml
crates/mid-log/headers/: mid_log.h
crates/mid-log/src/: buffer.rs  entry.rs  ffi.rs  level.rs  lib.rs  logger.rs  macros.rs  tests.rs  writer.rs
crates/mid-log/tests/c_ffi/: run_test.sh  test.c
crates/mid-math/: Cargo.toml
crates/mid-math/benches/: vs_glam.rs  wrapped_glam.rs
crates/mid-math/src/: constants.rs  deref.rs  ffi.rs  lib.rs  mat.rs  neon.rs  quat.rs  sse2.rs  tests.rs  vec.rs  wasm.rs
crates/mid-math/src/f32/: math.rs  mod.rs  vec2.rs
crates/mid-math/src/f32/neon/: mod.rs  vec3.rs
crates/mid-math/src/f32/scalar/: mat3.rs  mat4.rs  mod.rs  quat.rs  vec3.rs  vec4.rs
crates/mid-math/src/f32/sse2/: mat4.rs  mod.rs  quat.rs  vec3.rs  vec4.rs
crates/mid-math/src/f32/wasm/: mod.rs  vec3.rs
crates/mid-math/src/f64/: mod.rs
crates/mid-math/src/features/: mod.rs
crates/mid-math/src/ffi/: exports.rs  mod.rs  types.rs
crates/mid-net/: Cargo.toml
crates/mid-net/src/: ffi.rs  lib.rs  packet.rs  reliable.rs  sequence.rs  socket.rs
docs/: architecture.md  dev-setup.md  mid-ecs.md  mid-log.md  mid-net.md  platform-optimization.md
examples/headless-server/: Cargo.toml
examples/headless-server/src/: main.rs
mid-log/: index.html
mid-log/builds/build_1/: mid-log-test-results.json
mid-log/builds/build_10/: index.html  mid-log-test-results.json
mid-log/builds/build_13/: index.html  mid-log-test-results.json
mid-log/builds/build_2/: index.html  mid-log-test-results.json
mid-log/builds/build_24/: index.html  mid-log-test-results.json
mid-log/builds/build_3/: index.html  mid-log-test-results.json
mid-log/builds/build_33/: index.html  mid-log-test-results.json
mid-log/builds/build_4/: index.html  mid-log-test-results.json
mid-log/builds/build_42/: index.html  mid-log-test-results.json
mid-log/builds/build_5/: index.html  mid-log-test-results.json
mid-log/builds/build_6/: index.html  mid-log-test-results.json
mid-log/builds/build_7/: index.html  mid-log-test-results.json
mid-math/: index.html
mid-math/builds/build_10/: index.html  mid-math-test-results.json
mid-math/builds/build_13/: index.html  mid-math-test-results.json
mid-math/builds/build_19/: index.html  mid-math-test-results.json
mid-math/builds/build_23/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_24/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_29/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_3/: mid-math-test-results.json
mid-math/builds/build_35/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_40/: index.html  mid-math-test-results.json
mid-math/builds/build_42/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_45/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_47/: index.html  mid-math-test-results.json  release-perf.txt
mid-math/builds/build_49/: index.html  mid-math-test-results.json  release-perf.txt
packets/: player-event.mdix  player-state.mdix
tools/mdix-compiler/: Cargo.toml
tools/mdix-compiler/src/: main.rs
