[package]
name        = "mid-log"
version     = "0.1.0"
edition     = "2021"
description = "Non-blocking tiered logger for Mid Engine — FFI-ready, cross-platform"

[lib]
name = "mid_log"
# rlib       = Rust-to-Rust linking (Mid Engine, Ubel, other Rust crates)
# cdylib     = .dylib/.so/.dll  — C, C++, Unity, Godot, Unreal, Android
# staticlib  = .a               — iOS (App Store forbids dynamic libs)
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
rtrb = "0.3"

[dev-dependencies]
# Nothing extra needed — tests use only std

[features]
default   = []
backtrace = []
