

[package]
name        = "mid-math"
version     = "0.1.0"
edition     = "2021"
description = "SIMD-aligned math primitives for Mid Engine — FFI-ready, cross-platform"

[lib]
name = "mid_math"
# rlib      = Rust-to-Rust (Mid Engine, mid-ecs, mid-net, mid-physics)
# cdylib    = .so/.dylib/.dll — Unity, Unreal, Godot, any C host
# staticlib = .a              — iOS App Store
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]

[dev-dependencies]
# criterion: benchmark harness. HTML reports at target/criterion/
criterion = { version = "0.5", features = ["html_reports"] }
# glam: the reference SIMD math library. Used ONLY for vs_glam comparison.
# Update version here if crates.io has a newer release.
# https://crates.io/crates/glam
glam = { version = "0.28", features = [] }

[[bench]]
# Run: cargo bench --bench vs_glam -p mid-math
# HTML report: target/criterion/report/index.html
name    = "vs_glam"
harness = false

[features]
default = []
simd    = []   # reserved for explicit std::arch intrinsics pass
